--- a/index.html
+++ b/index.html
@@ -1,52 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House design farm</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>House design farm</title>
 
-    <!-- font awesome cdn -->
+  <!-- font awesome cdn -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <!-- google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
-    <!-- tailwind and daisy ui -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- tailwind and daisy ui -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- tailwind config -->
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                Heading_color: '#212121',
-                secondary: '#737373',
-                card_heading: '#41C1C1C',
-                card_description : '#494949',
-                footer:'#E9E9E9',
-              },
-              fontFamily: {
-                manrope:'manrope',
-              }
-            }
+  <!-- tailwind config -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            Heading_color: '#212121',
+          },
+          fontFamily: {
+            manrope: 'manrope',
           }
         }
-      </script>
+      }
+    }
+  </script>
 </head>
-<body>
-    <header>
-        
-    </header>
-    <main>
 
-    </main>
-    <footer>
+<body class="font-manrope">
+  <header>
 
-    </footer>
+    <!-- navbar -->
+     
+    <nav class="pl-3 lg:w-10/12 lg:mx-auto">
+      <div class="navbar justify-between lg:justify-around lg:items-center">
+        <div class="flex">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 bg-[#ABEF5F] rounded-[32px] -rotate-45 mr-1 w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+          </svg>
+          <h1 class="text-3xl font-extrabold text-Heading_color">Rinterio</h1>
+        </div>
+
+        <div class="navbar-center hidden lg:flex">
+          <ul class="flex gap-9">
+            <li class="text-base font-extrabold text-[#494949]">Home</li>
+            <li class="text-[#737373] font-normal text-base">Services</li>
+            <li class="text-[#737373] font-normal text-base">Portfolio</li>
+            <li class="text-[#737373] font-normal text-base">Blogs</li>
+            <li class="text-[#737373] font-normal text-base">Contact Us</li>
+          </ul>
+        </div>
+
+        <div class="flex items-center gap-2">
+
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 hidden lg:block border border-[#E9E9E9] rounded-[56px] w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 hidden lg:block border border-[#E9E9E9] rounded-[56px] w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+          </svg>
+          <button class="bg-[#ABEF5F] rounded-[32px] px-4 py-3  hidden text-xl font-extrabold text-[#1C1C1C] lg:flex lg:items-center lg:gap-1">Book Consult
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 text-white ">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+            </svg>
+          </button>
+
+          <div class="dropdown">
+            <div tabindex="0" role="button" class=" btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
