--- a/index.html
+++ b/index.html
@@ -128,17 +128,18 @@
       <img class="absolute" src="assets/Vector.png" alt="">
       <div class="lg:w-10/12 lg:mx-auto lg:flex lg:items-center">
         <div>
-            <div class="">
-          <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i
-              class="fa-solid fa-arrow-right"></i>
-            About Us
+          <div class="">
+            <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i
+                class="fa-solid fa-arrow-right"></i>
+              About Us
 
-          </button>
-          <h1 class="text-[#212121] font-bold text-4xl w-1/2 mt-4">We design thoughtful, liveable spaces</h1>
-          <p class="text-[#494949] text-base font-medium w-3/4 my-6">The barn house captivates with its blend of rustic
-            charm and modern sophistication, featuring weathered
-            wood, sleek metal accents.</p>
-        </div>
+            </button>
+            <h1 class="text-[#212121] font-bold text-4xl w-1/2 mt-4">We design thoughtful, liveable spaces</h1>
+            <p class="text-[#494949] text-base font-medium w-3/4 my-6">The barn house captivates with its blend of
+              rustic
+              charm and modern sophistication, featuring weathered
+              wood, sleek metal accents.</p>
+          </div>
           <!-- commercial card -->
           <div class="rounded-2xl drop-shadow-[0_4px_4px_rgba(0, 0, 0, 0.25)]">
             <div class="p-6 flex gap-6">
@@ -168,10 +169,52 @@
         </div>
 
         <div>
-            <img src="assets/Rectangle.png" alt="house">
+          <img src="assets/Rectangle.png" alt="house">
         </div>
       </div>
     </section>
+
+    <!-- card section -->
+
+    <section class="w-11/12 mx-auto">
+      <div class="text-center">
+        <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
+          How we works
+        </button>
+        <h1>Our Works Process</h1>
+        <P>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,sleek metal accents.</P>
+      </div>
+      <!-- card part -->
+      <div class="flex justify-evenly mt-8">
+        <!-- card-1 -->
+        <div class="bg-[#E7C1D3] rounded-2xl max-w-[275px] p-6">
+          <img src="assets/concept.png" alt="">
+          <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Concept</h2>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+        <!-- card-2 -->
+        <div class="bg-[#EFDA6E] rounded-2xl max-w-[275px] p-6">
+          <img src="assets/flow-chart.png" alt="">
+          <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Design Process</h2>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+        <!-- card-3 -->
+        <div class="bg-[#A4DAC3] rounded-2xl max-w-[275px] p-6">
+          <img src="assets/vision.png" alt="">
+          <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Supervision</h2>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+        <!-- card-4 -->
+        <div class="bg-[#77AAEA] rounded-2xl max-w-[275px] p-6">
+          <img src="assets/budget-planning.png" alt="">
+          <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Budget Planning</h2>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+
+
+      </div>
+    </section>
+
   </main>
   <footer>
 
