--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       }
     }
   </script>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body class="font-manrope">
@@ -125,7 +126,7 @@
     <!-- design type section -->
 
     <section class="">
-      <img class="absolute" src="assets/Vector.png" alt="">
+      <img class="" src="assets/Vector.png" alt="">
       <div class="lg:w-10/12 lg:mx-auto lg:flex lg:items-center">
         <div>
           <div class="">
@@ -181,8 +182,9 @@
         <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
           How we works
         </button>
-        <h1>Our Works Process</h1>
-        <P>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,sleek metal accents.</P>
+        <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Our Works Process</h1>
+        <P class="font-medium text-base text-[#494949]">The barn house captivates with its blend of rustic charm and
+          modern sophistication, featuring weathered wood,sleek metal accents.</P>
       </div>
       <!-- card part -->
       <div class="flex justify-evenly mt-8">
@@ -190,29 +192,81 @@
         <div class="bg-[#E7C1D3] rounded-2xl max-w-[275px] p-6">
           <img src="assets/concept.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Concept</h2>
-          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
+            and modern.</p>
         </div>
         <!-- card-2 -->
         <div class="bg-[#EFDA6E] rounded-2xl max-w-[275px] p-6">
           <img src="assets/flow-chart.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Design Process</h2>
-          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
+            and modern.</p>
         </div>
         <!-- card-3 -->
         <div class="bg-[#A4DAC3] rounded-2xl max-w-[275px] p-6">
           <img src="assets/vision.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Supervision</h2>
-          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
+            and modern.</p>
         </div>
         <!-- card-4 -->
         <div class="bg-[#77AAEA] rounded-2xl max-w-[275px] p-6">
           <img src="assets/budget-planning.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Budget Planning</h2>
-          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
+            and modern.</p>
         </div>
 
 
       </div>
+    </section>
+
+    <!-- input field section -->
+
+    <section class="background mt-24">
+      <div class="text-center">
+        <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
+          Let’s Connect
+        </button>
+        <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Let’s Discuss Next Project</h1>
+        <P class="font-medium text-base text-[#494949] mb-8">The barn house captivates with its blend of rustic charm
+          and modern sophistication, featuring weathered wood, sleek metal accents.</P>
+
+        <!-- input -->
+
+        <div class="w-10/12 mx-auto grid grid-cols-2 gap-6">
+          <input
+            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+            type="text" placeholder="First Name*">
+          <input
+            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+            type="text" placeholder="Last Name*">
+          <input
+            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+            type="text" placeholder="Phone Number*">
+          <input
+            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+            type="text" placeholder="Email Number*">
+
+          <textarea
+            class="border border-[#E9E9E9] col-span-2 rounded-[32px] bg-[#FFFFFF] text-[#A0A0A0] font-medium text-base pt-5"
+            name="" id="" rows="10">
+            Write your message here
+          </textarea>
+          <button
+            class="flex items-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send Mail
+
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1"
+              stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 mr-1 w-8 h-8 text-[#ffffff]">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+
+            </svg>
+          </button>
+
+
+        </div>
+      </div>
+
     </section>
 
   </main>
