add footer section

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
             Write your message here
           </textarea>
           <button
-            class="flex items-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send Mail
+            class="flex items-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send
+            Mail
 
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1"
               stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 mr-1 w-8 h-8 text-[#ffffff]">
@@ -270,8 +271,42 @@
     </section>
 
   </main>
-  <footer>
 
+  <!-- footer part -->
+
+  <footer class="bg-[#1C1C1C] mt-100px">
+    <div class="w-8/12 mx-auto py-[100px]">
+      <div class="flex mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="size-6 bg-[#ABEF5F] rounded-[32px] -rotate-45 mr-1 w-8 h-8">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+        </svg>
+        <h1 class="text-3xl font-extrabold text-[#ffffff]">Rinterio</h1>
+      </div>
+      <p class="text-base text-[#737373] font-medium mb-12">The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.</p>
+
+      <div class="navbar-center hidden lg:flex">
+        <ul class="flex justify-evenly gap-9">
+          <li class="text-base font-medium text-[#E9E9E9]">Home</li>
+          <li class="text-[#E9E9E9] font-medium text-base">Services</li>
+          <li class="text-[#E9E9E9] font-medium text-base">Portfolio</li>
+          <li class="text-[#E9E9E9] font-medium text-base">Blogs</li>
+          <li class="text-[#E9E9E9] font-medium text-base">Contact Us</li>
+        </ul>
+      </div>
+
+      <div>
+        <button
+        class="bg-[#ABEF5F] rounded-[32px] px-4 py-3  hidden text-xl font-extrabold text-[#1C1C1C] lg:flex mt-12 lg:items-center lg:gap-1">Book
+        Consult
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 text-white ">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+        </svg>
+      </button>
+
+    </div>
   </footer>
 </body>
 
