add challenge part

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     </nav>
 
     <!-- banner part -->
+     
     <div class="lg:flex lg:flex-col lg:justify-center lg:items-center lg:gap-y-6">
       <img src="assets/banner.png" alt="House">
       <h1 class="font-extrabold text-6xl text-[#212121] text-center">A barn house of this design has a<br>
@@ -177,7 +178,7 @@
 
     <!-- card section -->
 
-    <section class="w-11/12 mx-auto">
+    <section class="w-11/12 mx-auto bg-[#f4f4f4] py-[100px]">
       <div class="text-center">
         <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
           How we works
@@ -221,6 +222,71 @@
       </div>
     </section>
 
+    <!-- portfolio part -->
+
+    <section class="w-11/12 mx-auto">
+      <div class="text-center">
+        <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
+          Explore our Latest works
+        </button>
+        <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Our Latest Portfolio</h1>
+        <P class="font-medium text-base text-[#494949] mb-8">The barn house captivates with its blend of rustic charm
+          and modern sophistication, featuring weathered wood, sleek metal accents.</P>
+      </div>
+
+      <!-- challenge part -->
+
+      <div class="grid grid-cols-5 gap-6">
+        <div class="col-span-4">
+          <div class=" p-6 flex border border-   [#E9E9E9] rounded-[16px] bg-[#ffffff] gap-6">
+            <img src="assets/img1.png" alt="">
+            <div>
+              <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
+              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of rustic
+                charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
+              <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                </svg>
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl p-6">
+          <img class="mt-6" src="assets/img2.png" alt="">
+        </div>
+
+        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
+          <img src="assets/img3.png" alt="">
+        </div>
+
+        <div class="col-span-3">
+          <div class=" p-6 flex  border border-[#E9E9E9] rounded-[16px] bg-[#ffffff] gap-6">
+            <img src="assets/img4.png" alt="">
+            <div>
+              <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
+              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of rustic
+                charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
+              <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                </svg>
+              </h2>
+            </div>
+          </div>
+        </div>
+       
+        <div class="border border-[blue] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
+          <img src="assets/img5.png" alt="">
+        </div>
+
+      </div>
+
+    </section>
+
     <!-- input field section -->
 
     <section class="background mt-24">
@@ -231,42 +297,42 @@
         <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Let’s Discuss Next Project</h1>
         <P class="font-medium text-base text-[#494949] mb-8">The barn house captivates with its blend of rustic charm
           and modern sophistication, featuring weathered wood, sleek metal accents.</P>
+      </div>
+      <!-- input -->
 
-        <!-- input -->
+      <div class="w-10/12 mx-auto grid grid-cols-2 gap-6">
+        <input
+          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          type="text" placeholder="First Name*">
+        <input
+          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          type="text" placeholder="Last Name*">
+        <input
+          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          type="text" placeholder="Phone Number*">
+        <input
+          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          type="text" placeholder="Email Number*">
 
-        <div class="w-10/12 mx-auto grid grid-cols-2 gap-6">
-          <input
-            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
-            type="text" placeholder="First Name*">
-          <input
-            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
-            type="text" placeholder="Last Name*">
-          <input
-            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
-            type="text" placeholder="Phone Number*">
-          <input
-            class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
-            type="text" placeholder="Email Number*">
-
-          <textarea
-            class="border border-[#E9E9E9] col-span-2 rounded-[32px] bg-[#FFFFFF] text-[#A0A0A0] font-medium text-base pt-5"
-            name="" id="" rows="10">
+        <textarea
+          class="border border-[#E9E9E9] col-span-2 rounded-[32px] bg-[#FFFFFF] text-[#A0A0A0] font-medium text-base pt-5"
+          name="" id="" rows="10">
             Write your message here
           </textarea>
-          <button
-            class="flex items-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send
-            Mail
+        <button
+          class="flex items-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send
+          Mail
 
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1"
-              stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 mr-1 w-8 h-8 text-[#ffffff]">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor"
+            class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 mr-1 w-8 h-8 text-[#ffffff]">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
 
-            </svg>
-          </button>
+          </svg>
+        </button>
 
 
-        </div>
       </div>
+
 
     </section>
 
@@ -283,7 +349,8 @@
         </svg>
         <h1 class="text-3xl font-extrabold text-[#ffffff]">Rinterio</h1>
       </div>
-      <p class="text-base text-[#737373] font-medium mb-12">The barn house captivates with its blend of rustic charm and modern
+      <p class="text-base text-[#737373] font-medium mb-12">The barn house captivates with its blend of rustic charm and
+        modern
         sophistication, featuring weathered wood, sleek metal accents.</p>
 
       <div class="navbar-center hidden lg:flex">
@@ -298,15 +365,15 @@
 
       <div>
         <button
-        class="bg-[#ABEF5F] rounded-[32px] px-4 py-3  hidden text-xl font-extrabold text-[#1C1C1C] lg:flex mt-12 lg:items-center lg:gap-1">Book
-        Consult
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-          stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 text-white ">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
-        </svg>
-      </button>
+          class="bg-[#ABEF5F] rounded-[32px] px-4 py-3  hidden text-xl font-extrabold text-[#1C1C1C] lg:flex mt-12 lg:items-center lg:gap-1">Book
+          Consult
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 text-white ">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+          </svg>
+        </button>
 
-    </div>
+      </div>
   </footer>
 </body>
 
