--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
               d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
           </svg>
           <button
-            class="bg-[#ABEF5F] rounded-[32px] px-4 py-3  hidden text-xl font-extrabold text-[#1C1C1C] lg:flex lg:items-center lg:gap-1">Book
+            class="bg-[#ABEF5F] rounded-[32px] px-4 py-3  hidden text-xl font-extrabold text-[#1C1C1C]  text-center lg:block">Book
             Consult
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 text-white ">
+              stroke="currentColor" class="size-6 bg-[#1C1C1C] rounded-[32px] -rotate-45 text-white inline">
               <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
             </svg>
           </button>
@@ -99,18 +99,18 @@
     </nav>
 
     <!-- banner part -->
-     
+
     <div class="lg:flex lg:flex-col lg:justify-center lg:items-center lg:gap-y-6">
       <img src="assets/banner.png" alt="House">
-      <h1 class="font-extrabold text-6xl text-[#212121] text-center">A barn house of this design has a<br>
-        <span>striking appearance</span>
+      <h1 class="font-extrabold text-4xl mb-3 text-[#212121] text-center lg:w-3/4 lg:text-6xl ">A barn house of this
+        design has a striking appearance
       </h1>
-      <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend of rustic
-        charm and modern sophistication, featuring weathered wood, sleek metal<br> <span>accents, and large windows that
-          flood the space with natural light.</span></p>
+      <p class="text-base font-medium text-[#494949] text-center mb-3 lg:w-3/4">The barn house captivates with its blend
+        of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that
+        flood the space with natural light.</p>
 
       <button
-        class="flex items-center bg-[rgba(171, 239, 95, 0.5)] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24">View
+        class=" items-center bg-[#d3f6ad] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl mx-auto flex gap-2 px-6 py-3 mb-24">View
         Details
 
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -126,24 +126,23 @@
 
     <!-- design type section -->
 
-    <section class="">
-      <img class="" src="assets/Vector.png" alt="">
+    <section class="bg-[#f4f4f4] pl-3">
+      <img class="hidden lg:block" src="assets/Vector.png" alt="">
       <div class="lg:w-10/12 lg:mx-auto lg:flex lg:items-center">
         <div>
           <div class="">
-            <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i
+            <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949] bg-[#ffffff]"><i
                 class="fa-solid fa-arrow-right"></i>
               About Us
-
             </button>
-            <h1 class="text-[#212121] font-bold text-4xl w-1/2 mt-4">We design thoughtful, liveable spaces</h1>
-            <p class="text-[#494949] text-base font-medium w-3/4 my-6">The barn house captivates with its blend of
-              rustic
-              charm and modern sophistication, featuring weathered
+            <h1 class="text-[#212121] font-bold text-4xl text-center mt-4 lg:text-left">We design thoughtful, liveable spaces</h1>
+            <p class="text-[#494949] text-base font-medium  my-6 text-center lg:w-3/4 lg:text-left">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered 
               wood, sleek metal accents.</p>
           </div>
+
           <!-- commercial card -->
-          <div class="rounded-2xl drop-shadow-[0_4px_4px_rgba(0, 0, 0, 0.25)]">
+
+          <div class="lg:w-3/4 rounded-2xl drop-shadow-[0_4px_4px_rgba(0,0,0,0.25)] bg-[#ffffff]">
             <div class="p-6 flex gap-6">
               <div>
                 <img src="assets/commercial.png" alt="house">
@@ -155,8 +154,10 @@
               </div>
             </div>
           </div>
+
           <!-- residential card -->
-          <div class="rounded-2xl mt-6">
+
+          <div class="lg:w-3/4 rounded-2xl mt-6 bg-[#ffffff]">
             <div class="p-6 flex gap-6">
               <div>
                 <img src="assets/residential.png" alt="">
@@ -170,8 +171,9 @@
           </div>
         </div>
 
-        <div>
-          <img src="assets/Rectangle.png" alt="house">
+        <div class="">
+          <img class="hidden lg:block" src="assets/Rectangle.png" alt="house">
+          <img class="text-center w-full lg:hidden" src="assets/Rectangle 2.png" alt="">
         </div>
       </div>
     </section>
@@ -242,7 +244,8 @@
             <img src="assets/img1.png" alt="">
             <div>
               <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
-              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of rustic
+              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of
+                rustic
                 charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
               <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -267,7 +270,8 @@
             <img src="assets/img4.png" alt="">
             <div>
               <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
-              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of rustic
+              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of
+                rustic
                 charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
               <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -278,7 +282,7 @@
             </div>
           </div>
         </div>
-       
+
         <div class="border border-[blue] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
           <img src="assets/img5.png" alt="">
         </div>
