update challenge part

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
     <!-- card section -->
 
-    <section class="w-11/12 mx-auto bg-[#f4f4f4] py-[100px]">
-      <div class="text-center">
+    <section class="  bg-[#f4f4f4]">
+      <div class="w-11/12 mx-auto text-center">
         <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
           How we works
         </button>
@@ -189,31 +189,33 @@
         <P class="font-medium text-base text-[#494949]">The barn house captivates with its blend of rustic charm and
           modern sophistication, featuring weathered wood,sleek metal accents.</P>
       </div>
+
       <!-- card part -->
-      <div class="flex justify-evenly mt-8">
+
+      <div class="lg:flex lg:justify-evenly mt-8">
         <!-- card-1 -->
-        <div class="bg-[#E7C1D3] rounded-2xl max-w-[275px] p-6">
+        <div class="bg-[#E7C1D3] rounded-2xl p-6 w-full lg:max-w-[275px] ">
           <img src="assets/concept.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Concept</h2>
           <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
             and modern.</p>
         </div>
         <!-- card-2 -->
-        <div class="bg-[#EFDA6E] rounded-2xl max-w-[275px] p-6">
+        <div class="bg-[#EFDA6E] rounded-2xl mt-2 p-6 w-full lg:max-w-[275px]">
           <img src="assets/flow-chart.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Design Process</h2>
           <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
             and modern.</p>
         </div>
         <!-- card-3 -->
-        <div class="bg-[#A4DAC3] rounded-2xl max-w-[275px] p-6">
+        <div class="bg-[#A4DAC3] rounded-2xl mt-2 p-6 w-full  lg:max-w-[275px]">
           <img src="assets/vision.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Supervision</h2>
           <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
             and modern.</p>
         </div>
         <!-- card-4 -->
-        <div class="bg-[#77AAEA] rounded-2xl max-w-[275px] p-6">
+        <div class="bg-[#77AAEA] rounded-2xl mt-2 p-6 w-full lg:max-w-[275px]">
           <img src="assets/budget-planning.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Budget Planning</h2>
           <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
@@ -226,27 +228,25 @@
 
     <!-- portfolio part -->
 
-    <section class="w-11/12 mx-auto">
+    <section class="w-11/12 mx-auto bg-[#ffffff] mt-[100px]">
       <div class="text-center">
-        <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
+        <button class="border rounded-3xl px-4 py-2 font-bold text-base text-[#494949] bg-[rgba(171, 239, 95, 0.2)]"><i class="fa-solid fa-arrow-right"></i>
           Explore our Latest works
         </button>
         <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Our Latest Portfolio</h1>
-        <P class="font-medium text-base text-[#494949] mb-8">The barn house captivates with its blend of rustic charm
+        <P class="font-medium text-base text-[#494949] mb-8 text-justify">The barn house captivates with its blend of rustic charm
           and modern sophistication, featuring weathered wood, sleek metal accents.</P>
       </div>
 
       <!-- challenge part -->
 
-      <div class="grid grid-cols-5 gap-6">
-        <div class="col-span-4">
-          <div class=" p-6 flex border border-   [#E9E9E9] rounded-[16px] bg-[#ffffff] gap-6">
+      <div class="grid grid-cols-1 lg:grid-cols-5 gap-6">
+        <div class="lg:col-span-4">
+          <div class="p-6 border border-[#E9E9E9] rounded-[16px] bg-[#ffffff] lg:gap-6 lg:flex">
             <img src="assets/img1.png" alt="">
             <div>
               <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
-              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of
-                rustic
-                charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
+              <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
               <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45">
@@ -283,7 +283,7 @@
           </div>
         </div>
 
-        <div class="border border-[blue] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
+        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
           <img src="assets/img5.png" alt="">
         </div>
 
@@ -293,9 +293,9 @@
 
     <!-- input field section -->
 
-    <section class="background mt-24">
+    <section class="background mt-24 pl-3">
       <div class="text-center">
-        <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
+        <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949] bg-[#dfecd0]"><i class="fa-solid fa-arrow-right"></i>
           Let’s Connect
         </button>
         <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Let’s Discuss Next Project</h1>
@@ -304,27 +304,27 @@
       </div>
       <!-- input -->
 
-      <div class="w-10/12 mx-auto grid grid-cols-2 gap-6">
+      <div class="w-10/12 mx-auto flex flex-col gap-6  lg:grid  lg:grid-cols-2 lg:gap-6">
         <input
-          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          class="w-full border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
           type="text" placeholder="First Name*">
         <input
-          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          class=" w-full border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
           type="text" placeholder="Last Name*">
         <input
-          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          class="w-full border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
           type="text" placeholder="Phone Number*">
         <input
-          class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
+          class="w-full border border-[#E9E9E9] bg-[#FFFFFF] rounded-[64px] text-[#A0A0A0] font-medium text-base py-5 pl-5"
           type="text" placeholder="Email Number*">
 
         <textarea
-          class="border border-[#E9E9E9] col-span-2 rounded-[32px] bg-[#FFFFFF] text-[#A0A0A0] font-medium text-base pt-5"
+          class="w-full border border-[#E9E9E9] col-span-2 rounded-[32px] bg-[#FFFFFF] text-[#A0A0A0] font-medium text-base pt-5"
           name="" id="" rows="10">
-            Write your message here
+          Write your message here
           </textarea>
         <button
-          class="flex items-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send
+          class="flex items-center justify-center bg-[#ABEF5F] border border-[#ABEF5F] rounded-[32px] font-bold text-[#212121] text-xl gap-2 px-6 py-3 mb-24 col-span-2">Send
           Mail
 
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor"
