add and update challenge part

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <!-- card section -->
 
-    <section class="  bg-[#f4f4f4]">
+    <section class=" pl-3  bg-[#f4f4f4]">
       <div class="w-11/12 mx-auto text-center">
         <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
           How we works
@@ -192,9 +192,9 @@
 
       <!-- card part -->
 
-      <div class="lg:flex lg:justify-evenly mt-8">
+      <div class="lg:flex lg:justify-evenly mt-8 w-full">
         <!-- card-1 -->
-        <div class="bg-[#E7C1D3] rounded-2xl p-6 w-full lg:max-w-[275px] ">
+        <div class="bg-[#E7C1D3] rounded-2xl p-6 lg:max-w-[275px] ">
           <img src="assets/concept.png" alt="">
           <h2 class="text-[#1C1C1C] font-bold text-xl mt-2">Concept</h2>
           <p class="text-[#494949] mt-2 font-medium text-base">The barn house captivates with its blend of rustic charm
@@ -234,22 +234,23 @@
           Explore our Latest works
         </button>
         <h1 class="font-bold text-[#212121] text-4xl mt-4 mb-6">Our Latest Portfolio</h1>
-        <P class="font-medium text-base text-[#494949] mb-8 text-justify">The barn house captivates with its blend of rustic charm
+        <P class="font-medium text-base text-[#494949] mb-8 text-center">The barn house captivates with its blend of rustic charm
           and modern sophistication, featuring weathered wood, sleek metal accents.</P>
       </div>
 
       <!-- challenge part -->
 
-      <div class="grid grid-cols-1 lg:grid-cols-5 gap-6">
+      <div class="flex flex-col gap-4 lg:grid lg:grid-cols-5 lg:gap-6">
+        
         <div class="lg:col-span-4">
-          <div class="p-6 border border-[#E9E9E9] rounded-[16px] bg-[#ffffff] lg:gap-6 lg:flex">
-            <img src="assets/img1.png" alt="">
+          <div class="p-6 border border-[#E9E9E9] rounded-[16px] bg-[#ffffff] lg:flex lg:gap-6 ">
+            <img class="w-full lg:max-w-[260px]" src="assets/img1.png" alt="">
             <div>
-              <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
+              <h1 class="font-extrabold text-[#494949] text-2xl ">Commercial</h1>
               <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
-              <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
+              <h2 class="text-[#737373] font-extrabold text-[20px]">View Details
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45">
+                  stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45 inline">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                 </svg>
               </h2>
@@ -258,24 +259,24 @@
         </div>
 
         <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl p-6">
-          <img class="mt-6" src="assets/img2.png" alt="">
+          <img class="w-full lg:mt-6 " src="assets/img2.png" alt="">
         </div>
 
-        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
-          <img src="assets/img3.png" alt="">
+        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-full lg:max-w-[270px] p-6">
+          <img class="w-full" src="assets/img3.png" alt="">
         </div>
 
-        <div class="col-span-3">
-          <div class=" p-6 flex  border border-[#E9E9E9] rounded-[16px] bg-[#ffffff] gap-6">
-            <img src="assets/img4.png" alt="">
+        <div class="lg:col-span-3">
+          <div class="lg:flex lg:gap-6 p-6 border border-[#E9E9E9] rounded-[16px] bg-[#ffffff]">
+            <img class="w-full lg:max-w-[260px]" src="assets/img4.png" alt="">
             <div>
-              <h1 class="font-extrabold text-[#494949] text-2xl">Commercial</h1>
+              <h1 class="font-extrabold text-[#494949] text-2xl mt-2">Commercial</h1>
               <p class="font-medium text-base text-[#737373] mt-4 mb-5">The barn house captivates with its blend of
                 rustic
                 charm and modern. The barn house captivates with its blend of rustic charm and modern</p>
-              <h2 class="flex gap-2 text-[#737373] font-extrabold text-[20px]">View Details
+              <h2 class="text-[#737373] font-extrabold text-[20px]">View Details
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                  stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45">
+                  stroke="currentColor" class="size-6 rounded-[32px] bg-[#ABEF5F] -rotate-45 inline">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                 </svg>
               </h2>
@@ -283,8 +284,12 @@
           </div>
         </div>
 
-        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-[270px] p-6">
-          <img src="assets/img5.png" alt="">
+        <div class="border border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-full lg:max-w-[270px] p-6">
+          <img class="w-full" src="assets/img5.png" alt="">
+        </div>
+      
+        <div class="border  border-[#E9E9E9] bg-[#FFFFFF] rounded-2xl w-full p-6 lg:max-w-[270px] lg:hidden">
+          <img class="w-full" src="assets/img3.png" alt="">
         </div>
 
       </div>
@@ -293,7 +298,7 @@
 
     <!-- input field section -->
 
-    <section class="background mt-24 pl-3">
+    <section class="background mt-10 pl-3 lg:mt-24">
       <div class="text-center">
         <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949] bg-[#dfecd0]"><i class="fa-solid fa-arrow-right"></i>
           Let’s Connect
