update card and type part

--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
 
     <!-- design type section -->
 
-    <section class="bg-[#f4f4f4] pl-3">
-      <img class="hidden lg:block" src="assets/Vector.png" alt="">
-      <div class="lg:w-10/12 lg:mx-auto lg:flex lg:items-center">
+    <section class="lg:relative bg-[#f4f4f4] pl-3">
+      <img class=" lg:absolute lg:-top-12 lg:left-20 hidden lg:block" src="assets/Vector.png" alt="">
+      <div class="lg:w-10/12 lg:mx-auto lg:flex lg:items-center lg:mt-[100px] lg:pt-[100px]">
         <div>
-          <div class="">
+          <div class="text-center lg:text-left">
             <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949] bg-[#ffffff]"><i
                 class="fa-solid fa-arrow-right"></i>
               About Us
             </button>
-            <h1 class="text-[#212121] font-bold text-4xl text-center mt-4 lg:text-left">We design thoughtful, liveable spaces</h1>
+            <h1 class="text-[#212121] font-bold text-4xl text-center mt-4 lg:text-left lg:w-1/2">We design thoughtful, liveable spaces</h1>
             <p class="text-[#494949] text-base font-medium  my-6 text-center lg:w-3/4 lg:text-left">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered 
               wood, sleek metal accents.</p>
           </div>
@@ -157,7 +157,7 @@
 
           <!-- residential card -->
 
-          <div class="lg:w-3/4 rounded-2xl mt-6 bg-[#ffffff]">
+          <div class="lg:w-3/4 rounded-2xl mb-4 lg:mt-6 bg-[#ffffff]">
             <div class="p-6 flex gap-6">
               <div>
                 <img src="assets/residential.png" alt="">
@@ -171,16 +171,16 @@
           </div>
         </div>
 
-        <div class="">
+        <div>
           <img class="hidden lg:block" src="assets/Rectangle.png" alt="house">
-          <img class="text-center w-full lg:hidden" src="assets/Rectangle 2.png" alt="">
+          <img class="text-center mb-4 w-full lg:hidden" src="assets/Rectangle 2.png" alt="">
         </div>
       </div>
     </section>
 
     <!-- card section -->
 
-    <section class=" pl-3  bg-[#f4f4f4]">
+    <section class=" pl-3  bg-[#f4f4f4] lg:mt-[100px]">
       <div class="w-11/12 mx-auto text-center">
         <button class="rounded-3xl px-4 py-2 font-bold text-base text-[#494949]"><i class="fa-solid fa-arrow-right"></i>
           How we works
